--- a/src/AppTemplate.AuthApi/appsettings.json
+++ b/src/AppTemplate.AuthApi/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "AuthApiDbContext": "<Database_Connection_String>"
+  },
+  "AuthApiUrl": "<Auth_Api_Url>"
 }
